@@ -1,5 +1,5 @@
 /*
- * $Id: cairo.trm,v 1.12 2007/11/04 22:56:31 tlecomte Exp $
+ * $Id: cairo.trm,v 1.13 2007/12/20 03:15:55 sfeam Exp $
  */
 
 /* GNUPLOT - cairo.trm */
@@ -360,7 +360,7 @@ TERM_PUBLIC void cairotrm_options()
  * Is the 'main' function of the terminal. */
 void cairotrm_init()
 {
-	cairo_surface_t *surface;
+	cairo_surface_t *surface = NULL;
 
 	FPRINTF((stderr,"Init\n"));
 
@@ -721,7 +721,7 @@ TERM_TABLE_START (pdfcairo_driver)
     cairotrm_move, cairotrm_vector, cairotrm_linetype, cairotrm_put_text,
     cairotrm_text_angle, cairotrm_justify_text,
     cairotrm_point, do_arrow, cairotrm_set_font,
-    cairotrm_pointsize, TERM_CAN_MULTIPLOT|TERM_BINARY,
+    cairotrm_pointsize, TERM_CAN_MULTIPLOT|TERM_BINARY|TERM_CAN_DASH,
     cairotrm_text /* suspend */, 0 /* resume */, cairotrm_fillbox, cairotrm_linewidth
 #ifdef USE_MOUSE
     , 0, 0, 0, 0, 0
@@ -746,7 +746,7 @@ TERM_TABLE_START (pngcairo_driver)
     cairotrm_move, cairotrm_vector, cairotrm_linetype, cairotrm_put_text,
     cairotrm_text_angle, cairotrm_justify_text,
     cairotrm_point, do_arrow, cairotrm_set_font,
-    cairotrm_pointsize, TERM_BINARY,
+    cairotrm_pointsize, TERM_BINARY|TERM_CAN_DASH,
     0 /* suspend */, 0 /* resume */, cairotrm_fillbox, cairotrm_linewidth
 #ifdef USE_MOUSE
     , 0, 0, 0, 0, 0
