@@ -1,5 +1,5 @@
 /* Hey Emacs this is -*- C -*-
- * $Id: emf.trm,v 1.45 2007/11/21 22:24:24 sfeam Exp $
+ * $Id: emf.trm,v 1.46 2007/12/20 03:15:55 sfeam Exp $
  */
 
 /* GNUPLOT - emf.trm */
@@ -1249,7 +1249,7 @@ TERM_TABLE_START(emf_driver)
     EMF_linetype, EMF_put_text, EMF_text_angle,
     EMF_justify_text, EMF_point, do_arrow, EMF_set_font,
     EMF_set_pointsize,
-    TERM_BINARY,		/* various flags */
+    TERM_BINARY|TERM_CAN_DASH,		/* various flags */
     NULL,				/* suspend */
     NULL,				/* resume  */
     EMF_fillbox,
