@@ -1,5 +1,5 @@
 /* Hello, Emacs, this is -*-C-*-
- * $Id: metapost.trm,v 1.41 2007/02/22 03:49:33 sfeam Exp $
+ * $Id: metapost.trm,v 1.42 2007/12/20 03:15:55 sfeam Exp $
  */
 
 /* GNUPLOT - metapost.trm */
@@ -974,7 +974,7 @@ TERM_TABLE_START(mp_driver)
     MP_text, null_scale, MP_graphics, MP_move, MP_vector,
     MP_linetype, MP_put_text, MP_text_angle,
     MP_justify_text, MP_point, MP_arrow, MP_set_font, MP_pointsize,
-    TERM_BINARY|TERM_CAN_CLIP,		/*flags*/ 
+    TERM_BINARY|TERM_CAN_CLIP|TERM_CAN_DASH,	/*flags*/ 
     0, 0, MP_boxfill, MP_linewidth
 #ifdef USE_MOUSE
     , 0, 0, 0, 0, 0		/* no mouse support for metapost */
