@@ -1,5 +1,5 @@
 /* Hello, Emacs, this is -*-C-*-
- * $Id: xlib.trm,v 1.20 2006/07/21 02:35:49 sfeam Exp $
+ * $Id: xlib.trm,v 1.21 2007/12/20 03:15:55 sfeam Exp $
  */
 
 /* GNUPLOT - xlib.trm */
@@ -69,7 +69,7 @@ TERM_TABLE_START(xlib_driver)
     Xlib_text, null_scale, X11_graphics, X11_move, X11_vector,
     X11_linetype, X11_put_text, X11_text_angle,
     X11_justify_text, X11_point, do_arrow, X11_set_font,
-    X11_pointsize, TERM_CAN_MULTIPLOT|TERM_INIT_ON_REPLOT,
+    X11_pointsize, TERM_CAN_MULTIPLOT|TERM_INIT_ON_REPLOT|TERM_CAN_DASH,
     X11_text /* suspend can use same routine */ , 0 /* resume */ ,
     X11_fillbox, X11_linewidth
 #ifdef USE_MOUSE
